--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard Admin - Flowers Shop</title>
+    <title>Dashboard - Flowers Shop</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,69 +15,10 @@
     <link rel="stylesheet" href="css/admin.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
-  <body>
+  <body data-page="dashboard">
     <div class="admin-wrapper">
-      <aside class="sidebar">
-        <div class="sidebar-header">
-          <a href="dashboard.html" class="sidebar-brand"
-            >Flowers <span>Shop</span></a
-          >
-          <div class="sidebar-toggle" id="sidebarToggle">
-            <i class="bi bi-list"></i>
-          </div>
-        </div>
-
-        <ul class="sidebar-menu">
-          <li class="sidebar-item">
-            <a href="dashboard.html" class="sidebar-link active">
-              <i class="bi bi-speedometer2"></i>
-              <span>Dashboard</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="produk.html" class="sidebar-link">
-              <i class="bi bi-box-seam"></i>
-              <span>Produk</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="orders.html" class="sidebar-link">
-              <i class="bi bi-cart3"></i>
-              <span>Pesanan</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="pelanggan.html" class="sidebar-link">
-              <i class="bi bi-people"></i>
-              <span>Pelanggan</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="testimonials.html" class="sidebar-link">
-              <i class="bi bi-chat-left-text"></i>
-              <span>Testimoni</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="reports.html" class="sidebar-link">
-              <i class="bi bi-bar-chart"></i>
-              <span>Laporan</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="settings.html" class="sidebar-link">
-              <i class="bi bi-gear"></i>
-              <span>Pengaturan</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link logout-btn">
-              <i class="bi bi-box-arrow-right"></i>
-              <span>Logout</span>
-            </a>
-          </li>
-        </ul>
-      </aside>
+      <!-- Sidebar akan dimuat secara dinamis di sini -->
+      <div id="sidebar-container"></div>
 
       <div class="main-content">
         <header class="header">
@@ -91,11 +32,12 @@
 
             <div class="admin-profile">
               <img src="img/admin-avatar.jpg" alt="Admin" />
-              <span>Admin</span>
+              <span id="nama-admin">Admin</span>
             </div>
           </div>
         </header>
 
+        <!-- Statistik -->
         <div class="row">
           <div class="col-xl-3 col-md-6 mb-4">
             <div class="stat-card primary">
@@ -158,6 +100,7 @@
           </div>
         </div>
 
+        <!-- Grafik & Tabel -->
         <div class="row">
           <div class="col-md-8">
             <div class="chart-container">
@@ -196,11 +139,14 @@
           </div>
         </div>
 
+        <!-- Tabel Pesanan Terbaru -->
         <div class="data-table">
           <div class="table-header">
             <h2 class="table-title">Pesanan Terbaru</h2>
             <div class="table-actions">
-              <button class="btn btn-primary btn-sm">Lihat Semua</button>
+              <a href="pesanan.html" class="btn btn-primary btn-sm"
+                >Lihat Semua</a
+              >
             </div>
           </div>
 
@@ -216,41 +162,8 @@
                   <th>Aksi</th>
                 </tr>
               </thead>
-              <tbody>
-                <tr>
-                  <td>#FS2505001</td>
-                  <td>12 Mei 2025</td>
-                  <td>Anita Susanti</td>
-                  <td>Rp 215.000</td>
-                  <td>
-                    <span class="status-badge pending"
-                      >Menunggu Pembayaran</span
-                    >
-                  </td>
-                  <td>
-                    <button class="btn btn-primary btn-sm">Detail</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>#FS2504212</td>
-                  <td>10 Mei 2025</td>
-                  <td>Budi Santoso</td>
-                  <td>Rp 350.000</td>
-                  <td><span class="status-badge processing">Diproses</span></td>
-                  <td>
-                    <button class="btn btn-primary btn-sm">Detail</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>#FS2504210</td>
-                  <td>9 Mei 2025</td>
-                  <td>Maya Wijaya</td>
-                  <td>Rp 125.000</td>
-                  <td><span class="status-badge shipped">Dikirim</span></td>
-                  <td>
-                    <button class="btn btn-primary btn-sm">Detail</button>
-                  </td>
-                </tr>
+              <tbody id="recent-orders">
+                <!-- Data pesanan akan dimuat oleh JS -->
               </tbody>
             </table>
           </div>
@@ -258,6 +171,8 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/bantuan.js"></script>
     <script src="js/admin.js"></script>
     <script src="js/dashboard.js"></script>
   </body>
