--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Login - Flowers Shop</title>
+    <title>Login Admin - Flowers Shop</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,6 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="css/admin.css" />
+    <link rel="stylesheet" href="css/login.css" />
   </head>
   <body>
     <div class="login-container">
@@ -20,6 +21,8 @@
         <h2>Flowers <span>Shop</span></h2>
         <p>Admin Dashboard</p>
       </div>
+
+      <div id="login-error" class="alert alert-danger"></div>
 
       <form id="form-login-admin">
         <div class="mb-3">
@@ -30,7 +33,6 @@
               type="text"
               class="form-control"
               id="username-admin"
-              name="username"
               required
             />
           </div>
@@ -44,7 +46,6 @@
               type="password"
               class="form-control"
               id="password-admin"
-              name="password"
               required
             />
           </div>
@@ -57,14 +58,16 @@
 
         <button type="submit" class="btn btn-primary w-100">Login</button>
 
-        <div class="mt-3 text-center">
-          <a href="../index.html" class="text-muted">
+        <div class="login-footer">
+          <a href="../index.html">
             <i class="bi bi-arrow-left"></i> Kembali ke Website
           </a>
         </div>
       </form>
     </div>
 
-    <script src="js/admin-login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/bantuan.js"></script>
+    <script src="js/auth.js"></script>
   </body>
 </html>
