--- a/produk.html
+++ b/produk.html
@@ -13,71 +13,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="css/admin.css" />
-    <link rel="stylesheet" href="css/produk-fixed.css " />
+    <link rel="stylesheet" href="css/tabel.css" />
   </head>
-  <body>
+  <body data-page="produk">
     <div class="admin-wrapper">
-      <aside class="sidebar">
-        <div class="sidebar-header">
-          <a href="dashboard.html" class="sidebar-brand"
-            >Flowers <span>Shop</span></a
-          >
-          <div class="sidebar-toggle" id="sidebarToggle">
-            <i class="bi bi-list"></i>
-          </div>
-        </div>
-
-        <ul class="sidebar-menu">
-          <li class="sidebar-item">
-            <a href="dashboard.html" class="sidebar-link">
-              <i class="bi bi-speedometer2"></i>
-              <span>Dashboard</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="produk.html" class="sidebar-link active">
-              <i class="bi bi-box-seam"></i>
-              <span>Produk</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="orders.html" class="sidebar-link">
-              <i class="bi bi-cart3"></i>
-              <span>Pesanan</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="pelanggan.html" class="sidebar-link">
-              <i class="bi bi-people"></i>
-              <span>Pelanggan</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="testimonials.html" class="sidebar-link">
-              <i class="bi bi-chat-left-text"></i>
-              <span>Testimoni</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="reports.html" class="sidebar-link">
-              <i class="bi bi-bar-chart"></i>
-              <span>Laporan</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="settings.html" class="sidebar-link">
-              <i class="bi bi-gear"></i>
-              <span>Pengaturan</span>
-            </a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link logout-btn">
-              <i class="bi bi-box-arrow-right"></i>
-              <span>Logout</span>
-            </a>
-          </li>
-        </ul>
-      </aside>
+      <!-- Sidebar akan dimuat secara dinamis di sini -->
+      <div id="sidebar-container"></div>
 
       <div class="main-content">
         <header class="header">
@@ -91,11 +32,12 @@
 
             <div class="admin-profile">
               <img src="img/admin-avatar.jpg" alt="Admin" />
-              <span>Admin</span>
+              <span id="nama-admin">Admin</span>
             </div>
           </div>
         </header>
 
+        <!-- Tabel Produk -->
         <div class="data-table">
           <div class="table-header">
             <h2 class="table-title">Daftar Produk</h2>
@@ -108,7 +50,12 @@
                 />
                 <button><i class="bi bi-search"></i></button>
               </div>
-              <button class="btn btn-primary" id="btnAddProduct">
+              <button
+                class="btn btn-primary"
+                id="btnAddProduct"
+                data-bs-toggle="modal"
+                data-bs-target="#addProductModal"
+              >
                 <i class="bi bi-plus-lg"></i> Tambah Produk
               </button>
             </div>
@@ -118,212 +65,18 @@
             <table>
               <thead>
                 <tr>
-                  <th>ID</th>
-                  <th>Gambar</th>
-                  <th>Nama Produk</th>
-                  <th>Kategori</th>
-                  <th>Harga</th>
-                  <th>Stok</th>
-                  <th>Status</th>
-                  <th>Aksi</th>
+                  <th class="col-id">ID</th>
+                  <th class="col-image">Gambar</th>
+                  <th class="col-name">Nama Produk</th>
+                  <th class="col-category">Kategori</th>
+                  <th class="col-price">Harga</th>
+                  <th class="col-stock">Stok</th>
+                  <th class="col-status">Status</th>
+                  <th class="col-action">Aksi</th>
                 </tr>
               </thead>
               <tbody id="productTableBody">
-                <!-- Data statis produk -->
-                <tr>
-                  <td>P001</td>
-                  <td>
-                    <img
-                      src="img/products/p001.jpg"
-                      class="product-img"
-                      alt="Bunga Mawar"
-                      onerror="this.src='img/placeholder.jpg'"
-                    />
-                  </td>
-                  <td>Bunga Mawar</td>
-                  <td>Bunga Potong</td>
-                  <td>Rp 100.000</td>
-                  <td>25</td>
-                  <td><span class="product-status active">Aktif</span></td>
-                  <td>
-                    <div class="action-buttons">
-                      <button
-                        class="btn btn-info btn-sm edit-btn"
-                        data-id="P001"
-                      >
-                        <i class="bi bi-pencil-square"></i>
-                      </button>
-                      <button
-                        class="btn btn-danger btn-sm delete-btn"
-                        data-id="P001"
-                      >
-                        <i class="bi bi-trash"></i>
-                      </button>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>P002</td>
-                  <td>
-                    <img
-                      src="img/products/p002.jpg"
-                      class="product-img"
-                      alt="Bunga Lily"
-                      onerror="this.src='img/placeholder.jpg'"
-                    />
-                  </td>
-                  <td>Bunga Lily</td>
-                  <td>Bunga Potong</td>
-                  <td>Rp 120.000</td>
-                  <td>18</td>
-                  <td><span class="product-status active">Aktif</span></td>
-                  <td>
-                    <div class="action-buttons">
-                      <button
-                        class="btn btn-info btn-sm edit-btn"
-                        data-id="P002"
-                      >
-                        <i class="bi bi-pencil-square"></i>
-                      </button>
-                      <button
-                        class="btn btn-danger btn-sm delete-btn"
-                        data-id="P002"
-                      >
-                        <i class="bi bi-trash"></i>
-                      </button>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>P003</td>
-                  <td>
-                    <img
-                      src="img/products/p003.jpg"
-                      class="product-img"
-                      alt="Bunga Matahari"
-                      onerror="this.src='img/placeholder.jpg'"
-                    />
-                  </td>
-                  <td>Bunga Matahari</td>
-                  <td>Bunga Potong</td>
-                  <td>Rp 95.000</td>
-                  <td>5</td>
-                  <td>
-                    <span class="product-status low-stock">Stok Rendah</span>
-                  </td>
-                  <td>
-                    <div class="action-buttons">
-                      <button
-                        class="btn btn-info btn-sm edit-btn"
-                        data-id="P003"
-                      >
-                        <i class="bi bi-pencil-square"></i>
-                      </button>
-                      <button
-                        class="btn btn-danger btn-sm delete-btn"
-                        data-id="P003"
-                      >
-                        <i class="bi bi-trash"></i>
-                      </button>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>P004</td>
-                  <td>
-                    <img
-                      src="img/products/p004.jpg"
-                      class="product-img"
-                      alt="Bunga Tulip"
-                      onerror="this.src='img/placeholder.jpg'"
-                    />
-                  </td>
-                  <td>Bunga Tulip</td>
-                  <td>Bunga Potong</td>
-                  <td>Rp 150.000</td>
-                  <td>12</td>
-                  <td><span class="product-status active">Aktif</span></td>
-                  <td>
-                    <div class="action-buttons">
-                      <button
-                        class="btn btn-info btn-sm edit-btn"
-                        data-id="P004"
-                      >
-                        <i class="bi bi-pencil-square"></i>
-                      </button>
-                      <button
-                        class="btn btn-danger btn-sm delete-btn"
-                        data-id="P004"
-                      >
-                        <i class="bi bi-trash"></i>
-                      </button>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>P005</td>
-                  <td>
-                    <img
-                      src="img/products/p005.jpg"
-                      class="product-img"
-                      alt="Bunga Anggrek"
-                      onerror="this.src='img/placeholder.jpg'"
-                    />
-                  </td>
-                  <td>Bunga Anggrek</td>
-                  <td>Bunga Pot</td>
-                  <td>Rp 200.000</td>
-                  <td>8</td>
-                  <td><span class="product-status active">Aktif</span></td>
-                  <td>
-                    <div class="action-buttons">
-                      <button
-                        class="btn btn-info btn-sm edit-btn"
-                        data-id="P005"
-                      >
-                        <i class="bi bi-pencil-square"></i>
-                      </button>
-                      <button
-                        class="btn btn-danger btn-sm delete-btn"
-                        data-id="P005"
-                      >
-                        <i class="bi bi-trash"></i>
-                      </button>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>P006</td>
-                  <td>
-                    <img
-                      src="img/products/p006.jpg"
-                      class="product-img"
-                      alt="Bunga Krisan"
-                      onerror="this.src='img/placeholder.jpg'"
-                    />
-                  </td>
-                  <td>Bunga Krisan</td>
-                  <td>Bunga Potong</td>
-                  <td>Rp 85.000</td>
-                  <td>0</td>
-                  <td><span class="product-status inactive">Habis</span></td>
-                  <td>
-                    <div class="action-buttons">
-                      <button
-                        class="btn btn-info btn-sm edit-btn"
-                        data-id="P006"
-                      >
-                        <i class="bi bi-pencil-square"></i>
-                      </button>
-                      <button
-                        class="btn btn-danger btn-sm delete-btn"
-                        data-id="P006"
-                      >
-                        <i class="bi bi-trash"></i>
-                      </button>
-                    </div>
-                  </td>
-                </tr>
+                <!-- Data produk akan dimuat oleh JS -->
               </tbody>
             </table>
           </div>
@@ -469,9 +222,209 @@
       </div>
     </div>
 
-    <!-- Scripts -->
+    <!-- Modal Edit Produk -->
+    <div
+      class="modal fade"
+      id="editProductModal"
+      tabindex="-1"
+      aria-labelledby="editProductModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="editProductModalLabel">Edit Produk</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="editProductForm">
+              <input type="hidden" id="editProductId" />
+
+              <div class="row mb-3">
+                <div class="col-md-6">
+                  <div class="mb-3">
+                    <label for="editProductName" class="form-label"
+                      >Nama Produk</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="editProductName"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="mb-3">
+                    <label for="editProductCategory" class="form-label"
+                      >Kategori</label
+                    >
+                    <select
+                      class="form-select"
+                      id="editProductCategory"
+                      required
+                    >
+                      <option value="">Pilih kategori</option>
+                      <option value="bunga_potong">Bunga Potong</option>
+                      <option value="bunga_pot">Bunga Pot</option>
+                      <option value="pot_gantung">Pot Gantung</option>
+                      <option value="pot_rotan">Pot Rotan</option>
+                      <option value="pot_biasa">Pot Biasa</option>
+                      <option value="pot_kaki_besi">Pot Kaki Besi</option>
+                      <option value="aksesoris">Aksesoris</option>
+                      <option value="pot_kayu">Pot Kayu</option>
+                      <option value="pot_keramik">Pot Keramik</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row mb-3">
+                <div class="col-md-6">
+                  <div class="mb-3">
+                    <label for="editProductPrice" class="form-label"
+                      >Harga (Rp)</label
+                    >
+                    <input
+                      type="number"
+                      class="form-control"
+                      id="editProductPrice"
+                      min="0"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="mb-3">
+                    <label for="editProductStock" class="form-label"
+                      >Stok</label
+                    >
+                    <input
+                      type="number"
+                      class="form-control"
+                      id="editProductStock"
+                      min="0"
+                      required
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <div class="mb-3">
+                <label for="editProductDescription" class="form-label"
+                  >Deskripsi Produk</label
+                >
+                <textarea
+                  class="form-control"
+                  id="editProductDescription"
+                  rows="3"
+                ></textarea>
+              </div>
+
+              <div class="mb-3">
+                <label class="form-label">Gambar Produk</label>
+                <div class="row align-items-center">
+                  <div class="col-md-4">
+                    <img
+                      src="img/placeholder.jpg"
+                      id="editProductPreview"
+                      class="img-fluid rounded"
+                      alt="Preview"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="image-upload" id="editProductImageUpload">
+                      <i class="bi bi-cloud-upload"></i>
+                      <p>Klik untuk ganti gambar</p>
+                      <small>PNG, JPG, atau JPEG (Maks. 2MB)</small>
+                    </div>
+                    <input
+                      type="file"
+                      id="editProductImage"
+                      accept="image/*"
+                      style="display: none"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <div class="mb-3">
+                <label for="editProductStatus" class="form-label">Status</label>
+                <select class="form-select" id="editProductStatus">
+                  <option value="active">Aktif</option>
+                  <option value="inactive">Nonaktif</option>
+                </select>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Batal
+            </button>
+            <button type="button" class="btn btn-primary" id="updateProductBtn">
+              Simpan Perubahan
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal Konfirmasi Hapus -->
+    <div
+      class="modal fade"
+      id="deleteConfirmModal"
+      tabindex="-1"
+      aria-labelledby="deleteConfirmModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deleteConfirmModalLabel">
+              Konfirmasi Hapus
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Apakah Anda yakin ingin menghapus produk
+              <span id="deleteProductName" class="fw-bold"></span>?
+            </p>
+            <p class="text-danger">Tindakan ini tidak dapat dibatalkan.</p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Batal
+            </button>
+            <button type="button" class="btn btn-danger" id="confirmDeleteBtn">
+              Hapus Produk
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/bantuan.js"></script>
     <script src="js/admin.js"></script>
-    <script src="js/produk-fixed.js"></script>
+    <script src="js/produk.js"></script>
   </body>
 </html>
