--- a/laporan.html
+++ b/laporan.html
@@ -365,6 +365,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/bantuan.js"></script>
     <script src="js/admin.js"></script>
-    <script src="js/laporan-optimized.js"></script>
+    <script src="js/laporan.js"></script>
   </body>
 </html>
